deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: learning-openshift
  labels:
    app: learning-openshift
spec:
  replicas: 1
  selector:
    app: learning-openshift
    deploymentconfig: learning-openshift
  template:
    metadata:
      labels:
        app: learning-openshift
        deploymentconfig: learning-openshift
    spec:
      containers:
        - name: learning-openshift
          image: ""
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - learning-openshift
        from:
          kind: ImageStreamTag
          name: learning-openshift:latest
---
apiVersion: v1
kind: Service
metadata:
  name: learning-openshift
  labels:
    app: learning-openshift
spec:
  selector:
    app: learning-openshift
    deploymentconfig: learning-openshift
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: learning-openshift
  labels:
    app: learning-openshift
spec:
  to:
    kind: Service
    name: learning-openshift
  port:
    targetPort: http
